fix dependencies for team dev

--- a/force-app/main/default/classes/TestFactory.cls
+++ b/force-app/main/default/classes/TestFactory.cls
@@ -133,8 +133,7 @@ public class TestFactory {
                 sfLma__License_Type__c = 'Editable',
                 sfLma__Org_Type__c = 'Developer Edition',
                 sfLma__Status__c = 'Active',
-                sfLma__Subscriber_Org_ID__c = DEFAULT_ORG_ID,
-                isvconsole__isTestRunning__c = true
+                sfLma__Subscriber_Org_ID__c = DEFAULT_ORG_ID
            );
     }
 
@@ -153,8 +152,7 @@ public class TestFactory {
                 sfLma__Org_Type__c = 'Developer Edition',
                 sfLma__Status__c = 'Active',
                 sfLma__Subscriber_Org_ID__c = '00DB0000000He80',
-                sfLma__Org_Instance__c = 'CS122',
-                isvconsole__isTestRunning__c = true
+                sfLma__Org_Instance__c = 'CS122'
            );
     }
     
