--- a/force-app/main/default/classes/testListContainerController.cls
+++ b/force-app/main/default/classes/testListContainerController.cls
@@ -52,7 +52,7 @@ private class testListContainerController {
 
     @isTest static void test_emailServerController() {
         Account acct = [SELECT Id FROM Account WHERE Name='TestAcct0' LIMIT 1];
-        sfLma__License__c lr = [SELECT Id FROM sfLma__License__c];
+        sfLma__License__c lr = [SELECT Id FROM sfLma__License__c LIMIT 1];
         emailServerController rec = emailServerController.sendEmail('body', 'subject', 'email@email.com', acct.id, 'sendEmail', lr.id, '46522', true);
     }
 
