changes to post install

--- a/force-app/main/default/classes/TestFactory.cls
+++ b/force-app/main/default/classes/TestFactory.cls
@@ -7,7 +7,7 @@
 
 
 @isTest
-public class TestFactory {
+public without sharing class TestFactory {
     // define default constants that can be accessible to assert against.
 
     public static final String DEFAULT_ACCOUNT_NAME = 'ACME Inc.';
@@ -53,6 +53,15 @@ public class TestFactory {
                ShippingStreet = DEFAULT_STREET
            );
 
+    }
+
+    public static String getUUID()
+{
+        Blob b = Crypto.GenerateAESKey(128);
+        String h = EncodingUtil.ConvertTohex(b);
+        String guid = h.SubString(0,8)+ '-' + h.SubString(8,12) + '-' + h.SubString(12,16) + '-' + h.SubString(16,20) + '-' + h.substring(20);
+        system.debug(guid);
+        return guid;
     }
     
 
