--- a/force-app/main/default/classes/schedFetchMaintenance.cls
+++ b/force-app/main/default/classes/schedFetchMaintenance.cls
@@ -1,4 +1,4 @@
-public with sharing class schedFetchMaintenance implements Schedulable, Database.AllowsCallouts {
+public without sharing class schedFetchMaintenance implements Schedulable, Database.AllowsCallouts {
     public void execute(SchedulableContext SC) {
         callTrustAPI.getMaintenances();
      }
