--- a/force-app/main/default/classes/PublishExpiryEvent.cls
+++ b/force-app/main/default/classes/PublishExpiryEvent.cls
@@ -11,7 +11,10 @@
 
 public with sharing class PublishExpiryEvent implements Schedulable{
     public static void execute(SchedulableContext SC) {
-        String expiry = Date.valueOf(CountdownTimerController.getExpirationDate()).format();
-        eventbus.publish(new Org_Expiry_Notification__e(Expiry_Date__c = expiry));
+        String expiryDate = CountdownTimerController.getExpirationDate();
+        if(expiryDate != null){
+            String expiry = Date.valueOf(expiryDate).format();
+            eventbus.publish(new Org_Expiry_Notification__e(Expiry_Date__c = expiry));
+        }
     }
 }
